bugfix: hub: create post dialog: overflow issues

--- a/projects/charon/src/app/hub/components/hub-create-post-dialog/hub-create-post-dialog.component.scss
+++ b/projects/charon/src/app/hub/components/hub-create-post-dialog/hub-create-post-dialog.component.scss
@@ -42,6 +42,7 @@ $hub-create-post-dialog--submit-button--color: #FFFFFF;
   display: flex;
   flex-direction: column;
   height: 100%;
+  overflow: hidden;
 }
 
 .hub-create-post-dialog__form {
@@ -49,10 +50,12 @@ $hub-create-post-dialog--submit-button--color: #FFFFFF;
   flex-direction: column;
   margin-top: 24px;
   flex-grow: 1;
+  overflow: hidden;
 }
 
 .hub-create-post-dialog__editor {
   flex-grow: 1;
+  overflow: hidden;
 }
 
 .hub-create-post-dialog__category-select {
